@@ -47,6 +47,9 @@ boolean elf32_hppa_set_gp
 boolean elf32_hppa_build_stubs
   PARAMS ((struct bfd_link_info *));
 
+elf_hppa_reloc_type elf32_hppa_reloc_final_type
+  PARAMS ((bfd *, elf_hppa_reloc_type, int, unsigned int));
+
 extern elf_hppa_reloc_type ** _bfd_elf32_hppa_gen_reloc_type
   PARAMS ((bfd *, elf_hppa_reloc_type, int, unsigned int, int, asymbol *));
 
